--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.26.5",
     "chart.js": "^4.5.0",
+    "formidable": "^3.5.4",
     "next": "15.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
