--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.26.5",
+    "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "formidable": "^3.5.4",
     "next": "15.4.1",
